--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -133,6 +133,8 @@ footer p{
     padding-top: 20px;
 }
 
-
-
-
+.palomitas{
+    width: 100%;
+    height: 600px;
+    background-color: $blackColor;
+}
