--- a/scss/_cineclub.scss
+++ b/scss/_cineclub.scss
@@ -33,7 +33,7 @@
     background-color: $firstBlue;
     width: 100%;
     text-align: center;
-    color: $whiteColor;
+    color: $realWhite;
 }
 
 .sc{
