--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,31 @@
   background: linear-gradient(var(--back-colour7), var(--back-colour1), var(--back-colour7));
 }
 
+h1 {
+  font-size: 2.4em;
+  background: linear-gradient(var(--back-colour1), var(--back-colour2), var(--back-colour3));
+  color: #dcd5d0;
+  font-weight: 700;
+  height: 70px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-top: 20px;
+  border-radius: 0 0 5px 5px;
+  text-transform: uppercase;
+}
+
+.segundos-titulos {
+  background: linear-gradient(var(--back-colour1), var(--back-colour2), var(--back-colour3));
+  text-align: center;
+  color: whitesmoke;
+  font-weight: 700;
+  padding-top: 10px;
+  height: 50px;
+  border-radius: 0 0 5px 5px;
+  text-transform: uppercase;
+}
+
 * {
   font-family: "Quattrocento Sans", sans-serif;
   font-weight: 200;
@@ -158,6 +183,40 @@ footer p {
   font-size: 0.8em;
   color: #dcd5d0;
   padding-top: 20px;
+}
+
+.palomasimg {
+  background-image: url(../assets/palomitas4.webp);
+  width: 100%;
+  height: 800px;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 10px;
+}
+
+.div-no {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 100px;
+  text-align: center;
+  color: #dcd5d0;
+  font-weight: 700;
+}
+.div-no h2 {
+  font-size: 1.4em;
+  text-transform: uppercase;
+}
+
+.no-a {
+  font-size: 2.4em;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: rgba(18, 19, 28, 0.9019607843);
+}
+.no-a.no-a:hover {
+  color: rgba(236, 242, 247, 0.495);
+  cursor: pointer;
 }
 
 .carousel-item img {
@@ -283,7 +342,7 @@ footer p {
 
 .publ-cine {
   width: 680px;
-  height: 280px;
+  height: 320px;
   object-fit: fill;
   border-radius: 0 0 5px 5px;
 }
@@ -534,11 +593,6 @@ footer p {
   margin: 20px;
 }
 
-.video-trailer {
-  height: 500px;
-  width: 680px;
-}
-
 .btn-large {
   width: 700px;
 }
@@ -605,7 +659,7 @@ footer p {
   background-color: #466183;
   width: 100%;
   text-align: center;
-  color: #dcd5d0;
+  color: rgb(254, 254, 255);
 }
 
 .sc {
