--- a/scss/_cineclub.scss
+++ b/scss/_cineclub.scss
@@ -16,6 +16,7 @@
 
 .img-div{
     padding-right: 100px;
+    margin-bottom: 100px;
 }
 
 .contacto-cc{
@@ -34,6 +35,7 @@
     width: 100%;
     text-align: center;
     color: $realWhite;
+    margin-top: 5px;
 }
 
 .sc{
