--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -38,7 +38,7 @@
     text-transform: uppercase;
 }
 
-//grind index
+//grid index
 
 .grid{
     display: grid;
@@ -63,13 +63,14 @@
 
 .grid-template-column-row{
     grid-template-columns: 50% 50%;
-    grid-template-rows: 50px 300px 300px 350px;
+    grid-template-rows: 50px 300px 300px 250px;
     grid-template-areas:
     "proxi noti"
     "pelis noticias"
     "pelis noticias"
     "pelis noti-cine";
-    gap: 0 10px;
+    gap: 10px;
+    
 }
 
 //proximamente
@@ -79,7 +80,7 @@
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    background-color: #efefefa3;
+    background-color: $realWhite;
 }
 
 .fig-peli{
@@ -92,9 +93,10 @@
 }
 
 .portada-peli{
-    height: 350px;
-    width: 250px;
+    width: 15vw;
+    height: 32vh;
 }
+
 
 //noticias
 
@@ -130,16 +132,17 @@
 .f2{
     display: flex;
     justify-content: space-between;
+    background-color: red;
     border-bottom: solid 1px $blackColor;
     padding-bottom: 10px;
 }
 
 .publ-cine{
-    width: 680px;
-    height: 320px;
+    width: 40vw;
+    height: 30vh;
     object-fit: fill;
     border-radius: 0 0 5px 5px;
-    
+
 }
 
 .div-p-nacional{
@@ -211,12 +214,18 @@
 
 .noticias-camerica{
     display: flex;
-    align-items: center;
+    align-items: start;
     flex-wrap: wrap;
     justify-content: space-around;
     background-color: $bGroundGrey;
 }
 
+.divpu{
+    display: flex;
+    flex-direction: column;
+    background-color: $bGroundGrey;
+    align-items: center;
+}
 
 
 
