--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,68 +1,19 @@
-@media (max-width: 600px){
-    .grid-template-column-row{
-        grid-template-columns: 100%;
-        grid-template-rows: 50px repeat(4,300px) 50px repeat(2,200px) repeat(2,200px);
-        grid-template-areas:
-        "proxi"
-        "pelis"
-        "pelis"
-        "pelis"
-        "pelis"
-        "noti"
-        "noticias"
-        "noticias"
-        "noticias"
-        "noticias"
-        "noti-cine"
-        "noti-cine";
-    }
-}
-
-@media (max-width: 600px){
-    .grid-entradas-row-column{
-        grid-template-columns: 100%;
-        grid-template-rows: 50px 300px 50px 30px 300px 300px;
-        grid-template-areas:
-        "dia"
-        "comp"
-        "npeli"
-        "pinfo"
-        "pdes"
-        "trai"
-    }
-}
+//index//
 
 
-    .img-noticias{
-        width: 250px;
-        height: 160px;
-        padding-top: 5px;
-    }
-
-    .portada-peli{
-        height: 250px;
-        width: 200px;
-    }
-
-    .img-noticias-cine{
-        width: 250px;
-        height: 300px;
-    }
-
-    .segundos-titulos{
-        font-size: $textLg;
-    }
-
-    h1{
-        font-size: $textXlg;  
-    }
-
-@media (min-width: 400px) and (max-width: 600px){
+@media (min-width: 320px) and (max-width: 600px){
     .grid-template-column-row{
         grid-template-columns: 100%;
         grid-template-rows: 50px repeat(4,400px) 50px repeat(2,270px) repeat(2,200px);
         grid-template-areas:
         "proxi"
+        "pelis"
+        "pelis"
+        "pelis"
+        "pelis"
+        "pelis"
+        "pelis"
+        "pelis"
         "pelis"
         "pelis"
         "pelis"
@@ -99,5 +50,126 @@
     h1{
         font-size: $textXlg;  
 }
+
+    .f1,
+    .f2{
+        flex-direction: column;
+
+        img{
+            width: 100%;
+        }
+    }
+
+    .publ-cine{
+        width: 90%;
+        height: 90%;
+        
+    }
+
+    .noticias-camerica{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+}
+
+
+//cineclub
+
+@media (min-width: 320px) and (max-width: 600px){
+
+    .parte-cc{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .ban-cineclub{
+        font-size: $textLGg;
+    }
+
+    .ciclos{
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+        align-content: start;
+        
+        img{
+            width: 250px;
+            height: 370px;
+            margin: 10px 0px;
+            object-fit: cover;
+        }
+    }
+
+        .publicidades{
+            margin-top: 30px;
+        }
+
+
+        .wc{
+            width: 90%;
+        }
+
+        .p-cont{
+            width: 90%;
+        }
+}
+
+//ingreso - perfil //
+
+@media (min-width: 320px) and (max-width: 600px){
+
+    .ingreso{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: $lightLightBlue;
+        height: 900px;
+    }
+    
+
+
+    .publi-perfil{
+        padding-bottom: 5px;
+        margin-left: 0px;
+        padding-top: 20px;
+        
+        img{
+            max-height: 500px;
+            max-width: 100%;
+            object-fit: cover;
+        }
+
+}
+   
+   
+}
+
+//entradas//
+@media (min-width: 320px) and (max-width: 600px){
+    .grid-entradas-row-column{
+        grid-template-columns: 100%;
+        grid-template-rows: 50px 500px 20px 50px 40px 400px 100px;
+        grid-template-areas:
+        "comp"
+        "comp"
+        "none"
+        "npeli"
+        "tipo"
+        "pelimg"
+        "pinfo"
+        "pdes"
+        "trai"
+        "com"
+ 
+    }
+
+    .tit-compra{
+        font-size: $textLg;
+    }
 
 }
