--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -1,7 +1,5 @@
 //carousel header
 .carousel-item img{
-    height: 650px;
-    width: 100%;
     object-fit: cover;
 }
 
@@ -63,12 +61,13 @@
 
 .grid-template-column-row{
     grid-template-columns: 50% 50%;
-    grid-template-rows: 50px 300px 300px 250px;
+    grid-template-rows: 50px 250px 250px 300px;
     grid-template-areas:
     "proxi noti"
     "pelis noticias"
     "pelis noticias"
-    "pelis noti-cine";
+    "pelis noticias"
+    "pelis noticias";
     gap: 10px;
     
 }
@@ -94,7 +93,8 @@
 
 .portada-peli{
     width: 15vw;
-    height: 32vh;
+    height: 38vh;
+    object-fit: cover;
 }
 
 
@@ -132,16 +132,15 @@
 .f2{
     display: flex;
     justify-content: space-between;
-    background-color: red;
     border-bottom: solid 1px $blackColor;
-    padding-bottom: 10px;
 }
 
 .publ-cine{
-    width: 40vw;
-    height: 30vh;
-    object-fit: fill;
+    width: 50vw;
+    height: 50vh;
+    object-fit: cover;
     border-radius: 0 0 5px 5px;
+    padding: 20px 40px;
 
 }
 
@@ -214,18 +213,9 @@
 
 .noticias-camerica{
     display: flex;
-    align-items: start;
     flex-wrap: wrap;
-    justify-content: space-around;
-    background-color: $bGroundGrey;
-}
-
-.divpu{
-    display: flex;
-    flex-direction: column;
+    justify-content: center;
     background-color: $bGroundGrey;
     align-items: center;
 }
-
-
 
